--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#portifolio">Portifolio</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -42,6 +42,119 @@
         </div>
         <div class="home-img">
             <img src="images/portifolio1.jpeg" alt="">
+        </div>
+    </section>
+
+    <!-- about section design-->
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="images/portifolio2.jpeg" alt="">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque minus nihil quam explicabo reiciendis laborum culpa officiis dicta amet, facilis necessitatibus at quasi labore, doloremque molestiae odit? Perspiciatis, unde at.</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+    </section>
+
+     <!-- services section design-->
+
+    <section class="services" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam reprehenderit maiores molestiae optio, nesciunt enim totam cupiditate nihil qui praesentium delectus esse mollitia architecto! Accusantium autem maxime repellat maiores tenetur.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-paint'></i>
+                <h3>Cards Web Templates</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam reprehenderit maiores molestiae optio, nesciunt enim totam cupiditate nihil qui praesentium delectus esse mollitia architecto! Accusantium autem maxime repellat maiores tenetur.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-code-block'></i>
+                <h3>Software Development</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam reprehenderit maiores molestiae optio, nesciunt enim totam cupiditate nihil qui praesentium delectus esse mollitia architecto! Accusantium autem maxime repellat maiores tenetur.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- services portfolio design-->
+
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+
+        <!-- AQUI VOU INCLUIR JSON PARA INCREMENTO RAPIDO-->
+        <div class="portfolio-container">
+
+            <!--INICIO-->
+            <div class="portfolio-box">
+                <img src="images/portifolio1.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM-->
+             <!--INICIO-->
+             <div class="portfolio-box">
+                <img src="images/portifolio2.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM--> <!--INICIO-->
+            <div class="portfolio-box">
+                <img src="images/portifolio3.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM--> <!--INICIO-->
+            <div class="portfolio-box">
+                <img src="images/portifolio4.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM--> <!--INICIO-->
+            <div class="portfolio-box">
+                <img src="images/portifolio5.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM--> <!--INICIO-->
+            <div class="portfolio-box">
+                <img src="images/portifolio6.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <a href="#"><i class='bx bx-link'></i></a>
+                </div>
+            </div>
+            <!--FIM-->
         </div>
     </section>
 
