--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
+            <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
             <a href="#portfolio">Portfolio</a>
@@ -157,6 +157,37 @@
             <!--FIM-->
         </div>
     </section>
+
+    <!--Contact section-->
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email address">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy 2022 by Thiago de Paula AnPThil</p>
+
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bxs-home'></i></a>
+        </div>
+    </footer>
+
 
     <script src="js/script.js"></script>
 </body>
